--- a/JumpMaze/res/values/strings.xml
+++ b/JumpMaze/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">Jump Maze</string>
     <string name="action_settings">Settings</string>
     <string name="jump_maze">Jump Maze</string>
+    <string name="background_music">Background Music</string>
+    <string name="sounds_effects">Sounds Effects</string>
+    <string name="sound_title">Sound Options</string>
+    <string name="hint">Hints</string>
+    <string name="about">About</string>
+    <string name="tutorial">Tutorial</string>
+    <string name="start_maze">Start Maze!</string>
+    <string name="apply">Apply</string>
 
 </resources>
